--- a/src/components/Utils/Utils.css
+++ b/src/components/Utils/Utils.css
@@ -1,4 +1,3 @@
-
 .Hyph {
   margin-right: 5px;
   margin-left: 5px;
@@ -15,19 +14,20 @@
   width: 100%;
   border-radius: 4px;
   background-color: white;
-  font-size: 1.2em;
-  font-weight: bold;
 }
 
 .Input::placeholder,
 .Textarea::placeholder {
   color: #ccc;
 }
-
+.Input:focus,
+.Textarea:focus,
+.Button:focus {
+  background-color: lightskyblue;
+}
 .Textarea {
   resize: vertical;
 }
-
 
 .Button {
   color: black;
@@ -40,14 +40,14 @@
   border: 2px solid black;
   cursor: pointer;
 }
-.Button:hover{
+.Button:hover {
   color: white;
   background-color: black;
   transition: all 0.5s ease-in-out 0s;
 }
 
 .Required {
-  color: #CA1551;
+  color: #ca1551;
   font-family: Arial;
   font-weight: bold;
 }
@@ -60,7 +60,6 @@
   padding: 40px;
   font-size: 1.1em;
 }
-
 
 .NiceDate {
   color: rgb(100, 207, 96);
