--- a/src/components/ProjectDash/ProjectDash.css
+++ b/src/components/ProjectDash/ProjectDash.css
@@ -7,13 +7,13 @@
   list-style: none;
 }
 
-.ProjectDash__vacancies li {
+.ProjectDash .vacancies li {
   border: 1px black solid;
   margin: 1em;
   padding: 5%;
 }
 
-.ProjectDash__vacancies p {
+.ProjectDash .vacancies p {
   padding: 0;
   margin: auto;
 }
