--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -12,13 +12,9 @@
 .carousel .slide {
   flex: 1;
   margin: 0 1rem;
-  background: #ddd;
+  background: var(--colorLightBG);
   border-radius: 0.3em;
-  padding: 1rem;
-}
-
-.carousel .slide h3 {
-  margin: 0;
+  padding: 1.5rem;
 }
 
 .carousel .dots {
@@ -32,17 +28,21 @@
   height: 1rem;
   width: 1rem;
   border-radius: 50%;
-  border: 2px solid #222;
+  background: none;
+  outline: none;
+  border: 2px solid var(--colorAccent);
   margin: 0 0.5rem;
   cursor: pointer;
+  opacity: 0.5;
   transition: all 0.2s ease;
 }
 
 .carousel .dot:hover {
-  background: #888;
+  background: var(--colorAccent);
 }
 
 .carousel .dot.active {
-  background: #222;
+  opacity: 1;
+  background: var(--colorAccent);
   pointer-events: none;
 }
