--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,56 +1,146 @@
 .landing-page .hero {
-  padding: 8rem 0;
-  font-size: 2rem;
-  background: #ddd;
-  margin-bottom: 4rem;
+  font-size: 1.5rem;
+  background-image: url('../../images/hero-banner.jpg');
+  background-size: cover;
+  background-position: center;
+  z-index: 3;
+  position: relative;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-top: 10rem;
+  margin-bottom: 2rem;
 }
 
-.landing-page h1 {
+.landing-page .hero::before,
+.landing-page .hero::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  pointer-events: none;
+  z-index: -1;
+  background-color: var(--colorBG);
+  opacity: 0.7;
+}
+
+.landing-page .hero::after {
+  background: linear-gradient(transparent 75%, var(--colorBG));
+  opacity: 1;
+}
+
+.landing-page .hero h1 {
   font-size: 3rem;
-  text-transform: uppercase;
 }
 
-.landing-page h1 i {
-  display: block;
+.landing-page .hero p {
+  font-size: 1.5em;
+  width: 100%;
+  margin: 1em 0 2em;
+  color: var(--colorMidFG);
 }
 
-.landing-page .cta {
-  border: 2px solid #222;
-  padding: 0.5em 1em;
+@media screen and (min-width: 500px) {
+  .landing-page .hero {
+    justify-content: center;
+    padding-top: 0;
+    margin-bottom: 4rem;
+  }
+
+  .landing-page .hero h1 {
+    font-size: 5rem;
+  }
+}
+
+.landing-page .features .features-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+}
+
+.landing-page .features .features-title h2 {
+  font-size: 2rem;
+  color: var(--colorAccent);
   display: inline-block;
-  text-decoration: none;
-  color: inherit;
-  font-weight: bold;
-  transition: all 0.2s ease;
 }
 
-.landing-page .cta:hover {
-  background: #222;
-  color: #fff;
+.landing-page .features .line-after {
+  display: inline-block;
+  flex: 1;
+  height: 0.75rem;
+  margin-left: 1rem;
+  background: var(--colorDarkBG);
 }
 
-.landing-page .features,
-.landing-page .projects,
-.landing-page .push {
+.landing-page .features article {
+  display: flex;
+  margin-bottom: 2rem;
+}
+
+.landing-page .features h3 {
+  font-weight: 900;
+  text-transform: uppercase;
+  margin-bottom: 0.5rem;
+}
+
+.landing-page .features p {
+  font-size: 1.4rem;
+  line-height: 1.3;
+  color: var(--colorMidFG);
+}
+
+.landing-page .projects .wrapper,
+.landing-page .cta {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.landing-page .features article {
-  margin-bottom: 4rem;
+.landing-page .projects {
+  background: var(--colorDarkBG);
+  padding: 3rem 0;
 }
 
-.landing-page .carousel {
-  width: 70%;
+.landing-page .projects h2 {
+  text-align: center;
+  text-transform: capitalize;
+  line-height: 1.2;
+  margin-bottom: 2rem;
 }
 
-.landing-page .push {
-  margin-top: 4rem;
-  padding: 4rem;
-  background: #eee;
+.landing-page .cta {
+  background: url('../../images/what-are-you-waiting-for.jpg');
+  background-size: cover;
+  background-position: center;
+  padding: 4rem 0;
+  font-size: 1.5rem;
+  position: relative;
+  text-align: center;
+  z-index: 1;
 }
 
-.landing-page .push h2 {
-  margin: 0;
+.landing-page .cta:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: var(--colorBG);
+  opacity: 0.5;
+  z-index: -1;
+  pointer-events: none;
+}
+
+.landing-page .cta h2 {
+  margin: 0 auto 1rem;
+  color: var(--colorAccent);
+}
+
+.landing-page .cta p {
+  margin: 0 auto 2em;
 }
