--- a/src/components/ProjectItem/ProjectItem.css
+++ b/src/components/ProjectItem/ProjectItem.css
@@ -1,7 +1,4 @@
 .project {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
   font-weight: 500;
   height: 100%;
   font-size: 1.3rem;
@@ -17,23 +14,34 @@
   color: var(--colorMidFG);
 }
 
-.project .project-right {
-  margin-right: 1rem;
-  width: 30%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: space-between;
-}
-
-.projects .info-item {
+.project .info-item {
   margin-bottom: 0.7rem;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
   font-size: 1rem;
   color: var(--colorMidFG);
+}
+
+@media screen and (min-width: 500px) {
+  .project {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  .project .project-right {
+    width: 30%;
+    height: 100%;
+    margin-left: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+  }
+
+  .project .info-item {
+    justify-content: flex-end;
+  }
 }
 
 .projects .info-item svg {
@@ -51,10 +59,9 @@
 .tags {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-end;
   align-items: flex-start;
   user-select: none;
-  margin-bottom: 1rem;
+  margin: 1rem 0;
 }
 
 .tags .tag {
@@ -68,6 +75,17 @@
   color: var(--colorBG);
   white-space: nowrap;
   padding: 0 0.3rem;
-  margin-left: 0.5rem;
+  margin-right: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+@media screen and (min-width: 500px) {
+  .tags {
+    justify-content: flex-end;
+  }
+
+  .tags .tag {
+    margin-right: 0;
+    margin-left: 0.5rem;
+  }
 }
