--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,7 @@ svg {
   --colorMidFG: #c2c2c2;
   --colorAccent: #04f299;
   --colorDarkAccent: #274036;
+  --colorError: #ff6565;
 }
 
 /* forms */
@@ -113,8 +114,14 @@ form .title {
 }
 
 form .subtitle {
-  margin: 0 0 1.5rem;
+  margin: 0 0 1rem;
   color: var(--colorMidFG);
+}
+
+form .error {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  color: var(--colorError);
 }
 
 form .input-group {
