--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -54,6 +54,11 @@ nav .wrapper {
   justify-content: space-between;
 }
 
+nav .link-container {
+  flex: 1;
+  display: flex;
+}
+
 nav .links {
   display: flex;
   flex: 1;
