--- a/src/index.css
+++ b/src/index.css
@@ -170,6 +170,7 @@ form a {
 .page .page-content {
   flex: 1;
   position: relative;
+  margin-bottom: 2rem;
 }
 
 .page .page-content::before,
@@ -187,7 +188,7 @@ form a {
 
 .page .page-content::after {
   top: 5rem;
-  bottom: 0;
+  bottom: -2rem;
   height: initial;
   background: var(--colorDarkBG);
   clip-path: none;
@@ -205,7 +206,13 @@ html {
   font-family: 'interstate', sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 14px;
+  font-size: 12px;
+}
+
+@media screen and (min-width: 360px) {
+  html {
+    font-size: 14px;
+  }
 }
 
 @media screen and (min-width: 500px) {
@@ -254,6 +261,7 @@ body {
 
 /* links */
 a {
+  display: inline-block;
   color: inherit;
   text-decoration: none;
   transition: all 0.2s ease;
@@ -264,11 +272,46 @@ a:hover {
   text-decoration: underline;
 }
 
+/* hero styles */
+.hero {
+  height: 100vh;
+  background-image: url('./images/hero-banner.jpg');
+  background-size: auto 100vh;
+  background-position: top center;
+  z-index: 3;
+  position: relative;
+}
+
+.hero::before,
+.hero::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  pointer-events: none;
+  z-index: -1;
+  background-color: var(--colorBG);
+  opacity: 0.7;
+}
+
+.hero::after {
+  background: linear-gradient(transparent 75%, var(--colorBG));
+  opacity: 1;
+}
+
 /* helper classes */
 .wrapper {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 3rem;
+  padding: 0 2rem;
+}
+
+@media screen and (min-width: 500px) {
+  .wrapper {
+    padding: 0 3rem;
+  }
 }
 
 .card {
