--- a/src/components/ProjectForm/ProjectForm.css
+++ b/src/components/ProjectForm/ProjectForm.css
@@ -1,16 +1,17 @@
-.projectSubmitForm {
+.project-form {
+  width: 100%;
+  margin: 0;
+  max-width: initial;
+  margin-bottom: 2rem;
+}
+
+.project-form .project-right .input-group {
   width: 100%;
 }
 
-
-.submit {
-  margin-right: 10px;
-}
-
-
-
-@media only screen  and (min-width: 775px) {
-  .projectSubmitForm {
-    width: 60%;
-  }
+.project-form .btn {
+  margin-right: 1rem;
+  margin-bottom: 0;
+  transform: none;
+  box-shadow: none;
 }
