--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -18,7 +18,7 @@ nav .logo {
   transition: all 0.2s ease;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 680px) {
   nav {
     position: fixed;
   }
@@ -52,6 +52,12 @@ nav .wrapper {
 nav .menu-btn {
   margin-left: 1rem;
   margin-right: -1em;
+}
+
+nav .menu-btn .content,
+nav .menu-btn svg {
+  display: block;
+  height: 100%;
 }
 
 nav .menu {
@@ -104,7 +110,7 @@ nav .links li {
   margin-bottom: 2rem;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 680px) {
   nav .menu-btn {
     display: none;
   }
