--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -1,13 +1,16 @@
 .Avatar__logo {
-  border: 2px solid black;
   height: 3rem;
   width: 3rem;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: var(--colorAccent);
+  color: var(--colorBG);
+  font-weight: 700;
+  font-size: 1.3em;
 }
 
-.Avatar__logo_initials {
-  font-family: sans-serif;
+.Avatar__logo-grey {
+  background: var(--colorMidFG);
 }
