--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -47,6 +47,12 @@
   transform: none;
 }
 
+/* icons */
+.btn svg {
+  display: block;
+  height: 1em;
+}
+
 /* clear buttons */
 .btn-clear {
   background: transparent;
