--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,12 @@ h3,
   font-weight: 700;
 }
 
+h4,
+.h4 {
+  font-size: 1.3rem;
+  font-weight: 700;
+}
+
 em {
   font-style: italic;
 }
@@ -44,12 +50,12 @@ svg {
   display: inline-block;
   width: 100%;
   object-fit: cover;
+  margin-bottom: 2rem;
 }
 
 @media screen and (min-width: 680px) {
   .column {
     margin-right: 2rem;
-    margin-bottom: 2rem;
   }
 
   .column:nth-child(2n) {
@@ -130,7 +136,6 @@ form textarea:read-only {
 form label {
   display: flex;
   align-items: center;
-  position: relative;
 }
 
 form label.check {
@@ -180,7 +185,6 @@ form label.check:hover span::before {
 
 form .title {
   margin-bottom: 0.5rem;
-  color: var(--colorAccent);
 }
 
 form .subtitle {
@@ -197,6 +201,12 @@ form .error {
 form .input-group {
   display: flex;
   justify-content: space-between;
+  position: relative;
+}
+
+form .input-group.pinned {
+  align-items: flex-end;
+  width: 100%;
 }
 
 form .input-group .input {
@@ -205,6 +215,27 @@ form .input-group .input {
 
 form .input-group .input:nth-of-type(2n) {
   margin-left: 1em;
+}
+
+form .input-group.pinned input:not([type='checkbox']),
+form .input-group.pinned select,
+form .input-group.pinned textarea,
+form .input-group.pinned .btn {
+  margin-bottom: 1rem;
+}
+
+form .input-group.pinned label {
+  position: absolute;
+  height: 0;
+  width: 0;
+  opacity: 0;
+  margin: 0;
+}
+
+form .input-group.pinned .btn {
+  margin-left: 1rem;
+  transform: none;
+  box-shadow: none;
 }
 
 form .btn {
@@ -351,6 +382,18 @@ a:hover {
   text-decoration: underline;
 }
 
+/* external links */
+a[href*='//']::after
+{
+  content: '';
+  display: inline-block;
+  margin-left: 0.5em;
+  height: 0.8em;
+  width: 0.8em;
+  background: url('./images/svg/out.svg');
+  background-size: 100% 100%;
+}
+
 /* hero styles */
 .hero {
   height: 100vh;
@@ -393,6 +436,7 @@ a:hover {
   }
 }
 
+/* card styles */
 .card {
   background: var(--colorLightBG);
   padding: 1.3rem;
@@ -401,4 +445,72 @@ a:hover {
 
 .card .title {
   margin-bottom: 1.5rem;
+  color: var(--colorAccent);
+}
+
+.card form {
+  max-width: initial;
+}
+
+.card.info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card.info.error {
+  color: var(--colorError);
+}
+
+.card.info .btn {
+  padding: 0;
+  background: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card.info .btn:hover,
+.card.info .btn:focus {
+  padding: 0;
+  background: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* tags styles */
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  user-select: none;
+}
+
+.tags .tag {
+  display: inline-flex;
+  align-items: center;
+  height: 1.5rem;
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 700;
+  background: var(--colorAccent);
+  color: var(--colorBG);
+  opacity: 0.5;
+  white-space: nowrap;
+  padding: 0 0.3rem;
+  margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.tags .tag.tag-grey {
+  opacity: 1;
+  background: var(--colorMidFG);
+}
+
+@media screen and (min-width: 680px) {
+  .tags .tag {
+    margin-right: 0.5rem;
+    margin-left: 0;
+  }
 }
