--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -1,4 +1,4 @@
-.Avatar__logo {
+.avatar {
   height: 3rem;
   width: 3rem;
   border-radius: 50%;
@@ -11,6 +11,6 @@
   font-size: 1.3em;
 }
 
-.Avatar__logo-grey {
+.avatar.avatar-grey {
   background: var(--colorMidFG);
 }
