--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,12 @@ h4,
   font-weight: 700;
 }
 
+h5,
+.h5 {
+  font-size: 1.15rem;
+  font-weight: 700;
+}
+
 em {
   font-style: italic;
 }
@@ -281,6 +287,10 @@ form hr {
   margin-bottom: 2rem;
 }
 
+.page .page-content header {
+  padding: 0;
+}
+
 .page .page-content::before,
 .page .page-content::after {
   content: '';
@@ -519,4 +529,15 @@ a[href*='//']::after
     margin-right: 0.5rem;
     margin-left: 0;
   }
+}
+
+/* visually hidden elements */
+.hidden {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 0;
+  width: 0;
+  opacity: 0;
+  pointer-events: none;
 }
