--- a/src/components/ProjectDash/ProjectDash.css
+++ b/src/components/ProjectDash/ProjectDash.css
@@ -87,6 +87,24 @@
 
 .project-dash .chats {
   min-height: 10rem;
-  max-height: 50rem;
+  max-height: 32rem;
   overflow-y: auto;
+}
+
+.project-dash .modal {
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
+  border-bottom: 1px solid var(--colorDarkFG);
+}
+
+.project-dash .modal input {
+  margin-bottom: 0;
+}
+
+.project-dash .modal .btn {
+  transform: none;
+  box-shadow: none;
+  margin-right: 0.5rem;
+  margin-bottom: 0;
+  font-size: 1rem;
 }
