--- a/src/components/ChatMessages/ChatMessages.css
+++ b/src/components/ChatMessages/ChatMessages.css
@@ -69,6 +69,8 @@
   padding: 0.2rem 0;
   line-height: 1.3;
   margin-right: 0.3rem;
+  width: 100%;
+  word-break: break-all;
 }
 
 .message .body input {
